# moleculens-server

./: .env.example  .gitignore  .pre-commit-config.yaml  2itx.cif  AGENTS.md  DEPLOYMENT_READY.md  Dockerfile  MOLECULE_DIAGRAM_PLAN.md  NEXTJS_SERVER_MIGRATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  README_molecule_visualizer.md  SERVER_MAINTENANCE.md  SERVER_OPERATIONS.md  WEBHOOK_DEPLOYMENT.md  calvin_response.json  calvin_response_final.json  calvin_response_fixed.json  client_integration_examples.md  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.single.yml  docker-compose.yml  ethane_visualization.html  example_pdb_data.txt  example_script_data.json  example_usage.py  geometry_agent_water_molecule_test_report.md  geometry_agent_water_molecule_test_results.json  init.py  methane_visualization.html  models.txt  molecular_structure_test_report.md  molecular_structure_test_results.json  molecule_visualizer.py  multiple_queries_test_result.json  pubchem_failed_queries.json  pubchem_failed_queries_retest.json  pubchem_test_results.json  pyproject.toml  (+19 more)
.cursor/rules/: molecule-visualizer.mdc
.github/workflows/: ci.yml  deploy.yml  disk-space-monitor.yml  lint.yml
api/: .gitignore  1crn.cif  CLOUDFLARE_DEPLOYMENT.md  DOCKER_FIX.md  Dockerfile.celery  Readme.md  __init__.py  celery_app.py  docker-compose.yml  main.py  models.txt  multiple_queries_test_result.json  requirements.txt  search_methods_comparison.json  single_query_test_result.json  test_deepseek_extraction.py  test_geometry.html  viewer_(3R,4S,5S,6R)-6-(hydroxymethyl)oxane-2,3,4,5-tetrol.html  viewer_2-acetyloxybenzoic acid.html  viewer_ethane.html  worker.py  workers_requirements.txt  wrangler.toml
api/agent_management/: AGENT_MODEL_CONFIG.md  README.md  README_molecule_visualizer.md  __init__.py  agent_factory.py  agent_model_config.py  code_checker.py  debug_utils.py  diagram_renderer.py  example_pdb_data.txt  example_script_data.json  freethrow-agent.py  html_to_caption_json.py  llm_service-old.py  llm_service.py  llm_service_extension.py  model_config.py  model_registry.py  model_registry_test.py  models.py  molecule_visualizer.py  output.html  pymol_templates.py  pymol_translator.py  requirements.txt  scene_packager.py  scene_spec.py  test_file_injection.py  test_geometry.html  test_inject_data.py  test_interactive_html.py  test_interactive_output.html  test_interactive_string.html  test_llm_service.py
api/celery_app/: celery_app.py  config.py  tasks.py
api/debug/: js-test.html  molecule_viewer_debug.json  pubchem_html.html  pubchem_interactive.html  pubchem_js.js  pubchem_package.json  pubchem_pdb.txt  pubchem_sdf.txt  reconstructed_attempts.tsx  test_fixed_html.html  test_fixed_js.js  test_tsx_debug.json  tsx_generation_started.txt
api/dependencies/: use_llm.py
api/diagram/: __init__.py  constants.py  diagram_renderer.py  models.py
api/fastapi_utils/: __init__.py  testclient.py
api/llm/: __init__.py  llm.py  llm_service_extension.py  openai_client.py  openai_provider.py  rate_limit.py
api/pymol/: __init__.py  pymol_templates.py  pymol_translator.py  scene_spec.py
api/routers/: __init__.py
api/static/: scene.js  scene_0618b74c-e1a1-4ae7-ad4d-10f34d1863a4.html  scene_0618b74c-e1a1-4ae7-ad4d-10f34d1863a4.js  scene_0bb8cea6-3342-44b9-b18d-139220a2ff56.html  scene_0bb8cea6-3342-44b9-b18d-139220a2ff56.js  scene_13513083-30ab-4502-b0bc-476e0f761482.html  scene_13513083-30ab-4502-b0bc-476e0f761482.js  scene_1e2266dd-18e5-441e-aa20-908d211390cb.js  scene_20250301190628.js  scene_4f2425f9-fd21-4287-81d9-8f3d5b35cdd1.html  scene_4f2425f9-fd21-4287-81d9-8f3d5b35cdd1.js  scene_53d5f852-4f4a-4a7c-8019-f3ea932fde59.js  scene_56d295fc-eca4-4af8-95c4-c71d0a3b57f4.js  scene_5ac0e560-83ee-4f96-9e77-83c6054a0f72.html  scene_5ac0e560-83ee-4f96-9e77-83c6054a0f72.js  scene_6d3558d6-ae09-4eaa-b143-2ed8baad37da.js  scene_94e39501-d301-43d3-ac3f-beaa5b5092f7.html  scene_94e39501-d301-43d3-ac3f-beaa5b5092f7.js  scene_a1e449b9-3976-4b61-9a1a-77bbdb1dd1a9.js  scene_a9718686-ba93-46bb-b5f7-71345a2efaf7.js  scene_aeb97786-45ae-4014-bf04-357f5fa4fcc3.html  scene_aeb97786-45ae-4014-bf04-357f5fa4fcc3.js  scene_b19ac358-2e42-49e8-96b1-b6e5e123c4fd.html  scene_b19ac358-2e42-49e8-96b1-b6e5e123c4fd.js  (+7 more)
api/tests/: README.md  (+28 more)
data/: README.md  compose_rendered_images.py
docker/: Caddyfile.single  Dockerfile.api  Dockerfile.worker
docs/: AGENTS.md  COMPLETE_PIPELINE_DEMO.md  HYGIENE.md  MOLECULE_DIAGRAM_PLAN.md  ORGANIZATION_SUGGESTIONS.md  TRANSPARENT_RENDERING_IMPLEMENTATION.md  deployment.md  transparent_example.md
examples/: compose_rendered_images.py
fastapi/: __init__.py
proof-pymol-3d-rendering/: README.md  meta.json  verify_proof.sh
sample_data/: 1ubq.cif  compound_details.json
scripts/: deploy.sh
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_geometry_endpoints.py  test_graphic_routes.py  test_integration_full.py  test_prompt_routes.py  test_rcsb_endpoints.py  test_rcsb_extensions.py  test_rcsb_routes.py  test_rcsb_sequence_coordinates.py  test_render_routes.py
(+180 files in other folders)
